# thread-2-codex

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  index.html  package.json  pyproject.toml  requirements.txt  run-macmini-worker.command  server.py  youtube_sORoHYP7HRU_transcript_ko.txt
ai_shorts_clipper/: __init__.py  analyzer.py  app.py  cli.py  desktop_app.py  longform_agent.py  media_ingest.py  models.py  render.py  transcript.py  ytdlp_update.py
clipper_pipeline/: __init__.py  cli.py  hybrid_worker.py  server.py
docs/: concrete-workflow.md  digitalocean-secrets.md  editor-feature-analysis.md  gcp_credentials_review.md  google_drive_ingest_plan.md  hybrid-worker.md  integration_strategy.md  laptop-only.md  macmini-codex-handoff.md  macmini-operation.md  multi_channel_strategy.md  options-and-development.md  sample-clip-candidates.md  ui-feature-implementation-spec.md  video-analysis.md  workflow.md
scripts/: build_macos_app.py  install_macmini_launchd.command  print_digitalocean_env.py  run_macmini_server.command  thread2_uploader_launchd.zsh  uninstall_macmini_launchd.command
src/: main.jsx  styles.css
src/uploader/: __init__.py  adapters.py  cli.py  config.py  dedupe.py  drive_ingest.py  image_metadata.py  jsonio.py  metadata_templates.py  models.py  report.py  seo.py  trigger.py  video_probe.py  youtube_client.py
templates/: same_name_metadata_template.json  upload_json_template.json
tests/: test_hybrid_worker.py  test_transcript_analysis.py
web/: app.js  index.html  report-data.js  styles.css
