[project]
name = "youtube-shorts-uploader-codex"
version = "0.1.0"
description = "Beta mockup for scanning Shorts outputs, generating SEO metadata, and preparing safe YouTube uploads."
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0.1",
  "google-api-python-client>=2.130.0",
  "google-auth-oauthlib>=1.2.0",
]

[project.scripts]
shorts-uploader = "uploader.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
